# iree-forge

./: .gitmodules  README.md  activate
python_packages/iree-mlir-kit/: CMakeLists.txt  README.md  llvm  mlir  mlir-hlo
python_packages/iree-mlir-kit/python_package/: CMakeLists.txt
python_packages/iree-mlir-kit/python_package/_mlir_libs/: __init__.py
scripts/: bash_script_setup.sh  configure_mlir  git-iree-import-submodules  git-iree-init-submodules  git-iree-setup-remotes  git-iree-sync-trees  git-iree-update-tree
trees/iree/scripts/: download_file.py
trees/llvm-project/mlir/: CMakeLists.txt
trees/llvm-project/mlir/cmake/modules/: AddMLIR.cmake  AddMLIRPython.cmake
trees/llvm-project/mlir/lib/CAPI/: CMakeLists.txt
trees/llvm-project/mlir/python/mlir/: _cext_loader.py
trees/mlir-hlo/: CMakeLists.txt
trees/mlir-hlo/include/mlir-hlo-c/: Dialects.h
trees/mlir-hlo/lib/: CMakeLists.txt
trees/mlir-hlo/lib/Bindings/Python/: CMakeLists.txt  CoreModule.cpp
trees/mlir-hlo/lib/CAPI/: CMakeLists.txt  Dialects.cpp
trees/mlir-hlo/python/: CMakeLists.txt
trees/mlir-hlo/python/mlir_hlo/: __init__.py
trees/mlir-hlo/python/mlir_hlo/dialects/: CMakeLists.txt  _ods_common.py
